restructure project to modular monolith architecture

--- a/Backend/backendapp/src/main/resources/application.properties
+++ b/Backend/backendapp/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=${env.SQL_USERNAME}
 spring.datasource.password=${env.SQL_PASSWORD}
 
 jwt.secret=${env.JWT_SECRET}
-origin.frontendOrigin=${env.FRONTEND_ORIGIN}
+origin.frontend=${env.FRONTEND_ORIGIN}
